Update: Swagger documentation
